--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -14,6 +14,27 @@ body {
 .phonetic-symbols {
   font-family: Arial, sans-serif;
 }
+.bg-green-radial-gradient.light .glowing {
+  opacity: 1;
+}
+.glowing {
+  border-radius: 50%;
+  background: radial-gradient(
+    circle,
+    rgba(229, 229, 16, 1) 0%,
+    rgba(0, 255, 0, 0) 100%
+  );
+  position: absolute;
+  left: -4px;
+  top: 0;
+  width: 30px;
+  height: 30px;
+  /* background-image: linear-gradient(45deg, #00dc82, #00dc82, #00dc82); */
+  filter: blur(1px);
+  opacity: 0;
+
+  transition: all 1s ease;
+}
 
 @property --gradient-end {
   syntax: '<percentage>';
