--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -11,7 +11,7 @@ body {
   font-family: 'hand-drawn', Arial, sans-serif;
 }
 
-.phonetic-symbols {
+.normal-text {
   font-family: Arial, sans-serif;
 }
 .bg-green-radial-gradient.light .glowing {
@@ -143,4 +143,10 @@ body {
 
 ::selection {
   background-color: rgb(0 193 106 / 0.4);
+}
+
+.icon-bg {
+  border-color: rgba(0, 0, 0, 0);
+  backdrop-filter: blur(4px);
+  background-color: rgba(15, 20, 25, 0.75);
 }
